--- a/app/write.html
+++ b/app/write.html
@@ -12,14 +12,14 @@
 
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">LOGO</a>
+      <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/write">Write</a>
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
@@ -39,12 +39,27 @@
             <a class="nav-link disabled">Disabled</a>
           </li>
         </ul>
+
       </div>
     </div>
   </nav>
 
+  <h4 class="container mt-4"><strong>글 작성페이지</strong></h4>
 
-  <h4 class="container mt-4"><strong>메인</strong></h4>
+
+  <div class="container mt-3">
+    <form>
+      <div class="form-group">
+        <label>오늘의 할일</label>
+        <input type="text" class="form-control">
+      </div>
+      <div class="form-group">
+        <label>날짜</label>
+        <input type="text" class="form-control">
+      </div>
+      <button type="submit" class="btn btn-outline-secondary">Submit</button>
+    </form>
+  </div>
 
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
