--- a/app/write.html
+++ b/app/write.html
@@ -9,53 +9,25 @@
 </head>
 <body>
 
-
-  <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
-          </li>
-        </ul>
-
-      </div>
+  <nav class=" navbar-expand-lg bg-light">
+    <div class="-fluid">
+      <a class="navbar-brand" href="/">Logo</a>
+      <a class=" active" aria-current="page" href="/write">Write</a>
+      <a class="" href="#">Link</a>
     </div>
   </nav>
 
   <h4 class="container mt-4"><strong>글 작성페이지</strong></h4>
 
-
   <div class="container mt-3">
-    <form>
+    <form action="/add" method="POST">
       <div class="form-group">
         <label>오늘의 할일</label>
-        <input type="text" class="form-control">
+        <input type="text" class="form-control" name="title">
       </div>
       <div class="form-group">
         <label>날짜</label>
-        <input type="text" class="form-control">
+        <input type="text" class="form-control" name="date">
       </div>
       <button type="submit" class="btn btn-outline-secondary">Submit</button>
     </form>
