--- a/app/index.html
+++ b/app/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 
-<nav class=" navbar-expand-lg bg-light">
-  <div class="-fluid">
-    <a class="navbar-brand" href="/">Logo</a>
-    <a class=" active" aria-current="page" href="/write">Write</a>
-    <a class="" href="#">Link</a>
-  </div>
-</nav>
+  <nav class=" navbar-expand-lg bg-light">
+    <div class="-fluid">
+      <a class="navbar-brand" href="/">Logo</a>
+      <a class=" active" aria-current="page" href="/write">Write</a>
+      <a class="" href="/list">List</a>
+    </div>
+  </nav>
 
 
   <h4 class="container mt-4"><strong>메인</strong></h4>
